# pycolors

./: pyproject.toml
pycolor/: __init__.py  base.py
pycolors/: __init__.py  base.py
